--- a/www/css/page.css
+++ b/www/css/page.css
@@ -329,3 +329,34 @@
   float: right;
   color: gray;
 }
+.searchPanel{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+.searchPanelBg{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  opacity: 0.9;
+}
+.SearchCloseBtn{
+  position: fixed;
+  bottom: 15%;
+  left: 5%;
+  right: 5%;
+  font-size: 25px;
+  color : white;
+  border-radius: 120px;
+}
+.SearchCloseBtn:active{
+  font-size: 20px;
+}
+#searchBar{
+  position: fixed;
+  width: 80%;
+  margin-top: 50%;
+  margin-left: 10%;
+}
