--- a/www/css/profilePage.css
+++ b/www/css/profilePage.css
@@ -53,3 +53,19 @@ box-shadow: inset 0 0 20px black;
   text-shadow:  0px 0px 20px black;
   text-border: 1px solid red;
 }
+.setProfilPanel{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: gray;
+  z-index: 9999999;
+  padding-top: 15%;
+  align:center;
+}
+#setProfilPanelBtn{
+  width: 80%;
+  margin-top: 5%;
+}
+#setProfilPanelImage{
+border: 2px solid white;
+}
